--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,8 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  background-color: #999999;
+  color: #535bf2;
 }
 
 button {
@@ -42,7 +44,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #800080;
   cursor: pointer;
   transition: border-color 0.25s;
 }
